# todolist-agent-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci-cd.yml
docs/: api.md
experiments/: todos.ipynb
instructions/: instructions.md  tools.md
prisma/: dev.db  schema.prisma
prisma/migrations/20241021195944_additional_todo_fields/: migration.sql
src/: auth.py  config.py  logger.py  main.py  prep_data.py
src/api/: chat.py  models.py
src/graphql/: context.py  schema.py
src/models/: chat.py  todo.py
src/services/: assistant_service.py  chat_service.py
src/services/todos/: todos_service.py  todos_service_sync.py
src/services/tools/: query_data.py
src/utils/: helpers.py  input_validation.py  validators.py
tests/: conftest.py  test_main.py
tests/api/: test_chat.py  test_models.py
tests/graphql/: test_resolvers.py
tests/services/: test_chat_service.py
tests/services/tools/: test_query_data.py
